feat: add footer, main in css

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@ body {
 * {
     box-sizing: border-box;
   }
+  
+header {
+  border: 1px solid red;
+ }
+  
+footer {
+  border: 1px solid red;
+  }
+
+main {
+   border: 1px solid red;
+  }
+   
 p {
     color: red;
     width: 500px;
