--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
   font-family: 'Roboto', sans-serif;
-  }
+  min-height: 100vh;  
+}
 * {
     box-sizing: border-box;
-  }
-  
+}
+
 header {
   border: 1px solid red;
  }
