--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body {
     box-sizing: border-box;
 }
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 header {
   border: 1px solid red;
  }
