--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
   margin: 0 auto;
 }
 
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 header {
   border: 1px solid red;
  }
