--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ main {
   }
    
 p {
-    color: red;
+    color: black;
     width: 500px;
-    border: 1px solid black;
+    border: 0px solid black;
   }
