--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  list-style: none;
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  color: black;
+  width: 16px;
 }
 
 html {
