--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ body {
   list-style: none;
   padding: 0 20px;
   line-height: 50px;
-  text-decoration: none;
-  color: black;
   }
+
+a { text-decoration: none; color: black; }
 
 html {
   scroll-behavior: smooth; 
