feat: add background footer and header

--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,12 @@ html {
 
 header {
   border: 1px solid red;
+  background-color: cornflowerblue;
  }
   
 footer {
   border: 1px solid red;
+  background-color: cornflowerblue;
   }
 
 main {
