--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,20 @@ body {
   line-height: 50px;
   }
 
+.nav-link {
+  transition: .3s;
+  }
+
+.section-item a {
+    color: #829985;
+    text-decoration: none;  
+    transition: color 0.5s;
+  }
+
+.section-item a:hover {
+    color: #4d2323;
+  }
+
 a { text-decoration: none; color: black; }
 
 html {
