fix: border delete

--- a/css/style.css
+++ b/css/style.css
@@ -44,17 +44,15 @@ html {
 }
 
 header {
-  border: 1px solid red;
   background-color: cornflowerblue;
  }
   
 footer {
-  border: 1px solid red;
   background-color: cornflowerblue;
   }
 
 main {
-   border: 1px solid red;
+  background-color: #fff;
   }
    
 p {
