--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
     box-sizing: border-box;
 }
 
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
@@ -54,7 +60,16 @@ footer {
 main {
   background-color: #fff;
   }
-   
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+.section {
+    width: 50%;
+  }
+
 p {
     color: black;
     width: 500px;
