--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,22 @@ a { text-decoration: none; color: black; }
     color: #4d2323;
   }
 
+.section-item {
+    position: relative;
+    padding-left: 30px;
+  }
+  
+.section-item::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0px;
+    width: 10px;
+    height: 10px; 
+    border: 1px solid #829985;
+    border-radius: 50%;
+  }
+
 html {
   scroll-behavior: smooth; 
 }
