--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,18 @@ body {
   list-style: none;
   padding: 0 20px;
   line-height: 50px;
+  font-size: 14px;
+
   }
 
 .nav-link {
   transition: .3s;
   }
 
-a { text-decoration: none; color: black; }
+a { text-decoration: none; color: black; 
+    display:inline-block;
+    padding:5px;
+  }
 
 .section {
     width: 50%;
