--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   justify-content: space-between;
 }
 .container {
-  max-width: 1440px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   flex: wrap;
@@ -79,6 +79,7 @@ p {
     width: 50%;
     flex-basis: 50%;
     Flex: 1 1 50%;
+    max-width: 50%;
   }
 .section-title {
     font-size: 20px;
