--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   display: flex;
   flex: wrap;
   max-width: 100vw;
+  flex-wrap: wrap;
 
 }
 footer {
@@ -57,6 +58,7 @@ main {
 .main-container {
     display: flex;
     flex-wrap: wrap;
+    max-width: 1440px;
   }
 .nav-list {
   display: flex;
