--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ body {
   justify-content: space-between;
 }
 .container {
-  max-width: 100%;
+  max-width: 100vw;
   margin: 0 auto;
   display: flex;
   flex: wrap;
-  max-width: 100vw;
   flex-wrap: wrap;
+  max-width: 1440px;
 
 }
 footer {
